--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,8 @@ name: "CI/CD Pipeline"
 on:
   push:
     branches:
-      - main
+      - master
+  workflow_dispatch: #allow manual trigger
 
 jobs:
   docker:
