--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch: #allow manual trigger
+  workflow_dispatch: # allow manual trigger
 
 jobs:
   docker:
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: "Build Docker image"
-        run: docker build -t juice-shop:latest .  
+        run: docker build -t juice-shop:${{ github.run_id }} .
