--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,3 +18,7 @@ jobs:
 
       - name: "Log into Docker Hub"
         run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+      - name: "Push Docker image"
+        run: docker push juice-shop:${{ github.run_id }}
+
