--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,10 @@ jobs:
       - name: "Build agondo App Docker image"
         run: docker build -t juice-shop:${{ github.run_id }} .
 
+      - name: "Install Docker Scout"
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh
+
       - name: "Scan Docker image with Docker Scout"
         run: docker scout cves juice-shop:${{ github.run_id }}
 
