--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,5 +37,6 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.branch.name=master
 
 
