Scan image with Sonar Cloud

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,8 +34,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.projectKey=agondo-juice-shop-sonar
+            -Dsonar.organization=agondo-juice-shop-sonar
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.branch.name=master
 
