--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,9 @@ jobs:
           args: >
             -Dsonar.projectKey=agondo-juice-shop-sonar
             -Dsonar.organization=agondo-juice-shop-sonar
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.branch.name=master
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.branch.name=${{ github.ref_name || 'master' }} \
+            -X  # Add -X for detailed debug logs
+
 
 
