Scan image with Sonar Cloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       # Step 1: Checkout the repository
-      - name: "Checkout code"
+      - name: "Checkout my code"
         uses: actions/checkout@v4
 
       # Step 2: Log in to Docker Hub using credentials stored in GitHub secrets
