--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,3 +33,14 @@ jobs:
       # Step 5: Scan the Docker image for CVEs using Docker Scout
       - name: "Scan Docker image with Docker Scout"
         run: docker scout cves juice-shop:${{ github.run_id }}
+
+      # Step 6: Verify SonarCloud Project Configuration    
+      - name: "Verify SonarCloud Project Configuration"
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+        run: |
+          curl -u "${SONAR_TOKEN}:" \
+          "https://sonarcloud.io/api/projects/search?projects=${SONAR_PROJECT_KEY}"
+  
+    # Step 7: Run a SonarCloud scan for code analysis
